--- a/odata/webapp/view/View1.view.xml
+++ b/odata/webapp/view/View1.view.xml
@@ -1,12 +1,14 @@
 <mvc:View 
     controllerName="odata.controller.View1"
     xmlns:mvc="sap.ui.core.mvc"
-    xmlns:core="sap.ui.core"
-    xmlns="sap.m"
-    xmlns:f="sap.f"
+		xmlns:core="sap.ui.core"
+		xmlns="sap.m"
+		xmlns:f="sap.f"
+		xmlns:fb="sap.ui.comp.filterbar"
+		xmlns:svm="sap.ui.comp.smartvariants"
 >
 
-    <f:DynamicPage toggleHeaderOnTitleClick="false">
+    <f:DynamicPage headerExpanded="{/headerExpanded}" toggleHeaderOnTitleClick="false">
         <f:title>
             <f:DynamicPageTitle >
                 <f:heading>
@@ -14,21 +16,106 @@
                 </f:heading>
             </f:DynamicPageTitle>
         </f:title>
-    
+
+
+
 
         <f:content>
+          
             <VBox fitContainer="true">
+                <fb:FilterBar 
+                id="filterbar" 
+                persistencyKey="myPersKey" 
+                useToolbar="false"
+                search=".onSearch"
+                filterChange=".onFilterChange" >
+                    <fb:filterItems>
+                        <fb:FilterItem name="Plant" label="지점코드">
+                            <fb:control>
+                                <ComboBox
+											id="plantInput"
+											selectedKey="{Main>/sSearchPlant}"
+											placeholder="지점을 입력하세요."
+											showSecondaryValues="true">
+                                            <items>
+                                                <core:ListItem 
+                                                   key="S" 
+                                                   text="서울지점"
+                                                   additionalText="S"/>
+                                               <core:ListItem 
+                                                   key="J" 
+                                                   text="제주지점"
+                                                   additionalText="J"/>
+                                           </items>
+                                </ComboBox>
+                            </fb:control>
+                        </fb:FilterItem> 
+                        
+                        <fb:FilterItem name="Floor" label="층수">
+									<fb:control>
+										<ComboBox
+											id="floorInput"
+											selectedKey="{Main>/sSearchFloor}"
+											placeholder="층수를 입력하세요."
+											showSecondaryValues="true">
+											<items>
+												<core:ListItem 
+													key= "03"
+													text="3층"/>
+												<core:ListItem 
+													key="04" 
+													text="4층"/>
+                                                <core:ListItem 
+													key="05" 
+													text="5층"/>
+												<core:ListItem 
+													key="06" 
+													text="6층"/>
+                                                <core:ListItem 
+													key="07" 
+													text="7층"/>
+												<core:ListItem 
+													key="08" 
+													text="8층"/>
+                                                <core:ListItem 
+													key="09" 
+													text="9층"/>
+                                                <core:ListItem 
+													key="10" 
+													text="10층"/>
+												<core:ListItem 
+													key="11" 
+													text="11층"/>
+											</items>
+										</ComboBox>
+								    </fb:control>
+								</fb:FilterItem>
+
+                                <fb:FilterItem name="Roomid" label="Room 번호">
+									<fb:control>
+										<Input
+											id="ponoInput"
+											value="{Main>/sSearchRoomid}"
+											placeholder="Roomid를 입력하세요.">
+										</Input>
+									</fb:control>
+								</fb:FilterItem>
+                    </fb:filterItems>
+
+                </fb:FilterBar>
+
                 <Table 
-                    id="productTable"
+                    id="RoomTable"
                     inset="false"
-                    items="{
-                        path: '/RoomstatusSet' 
-                    }"
+                    items="{Main>/oTableData}"
                     class="sapFDynamicPageAlignContent"
                     width="auto">
                     <columns>
                         <Column>
                             <Text text="지점" />
+                        </Column>
+                        <Column>
+                            <Text text="층수" />
                         </Column>
                         <Column>
                             <Text text="룸id" />
@@ -48,16 +135,19 @@
                         type="Navigation"
                         press=".onListItemPress">
                         <cells>
-                            <ObjectIdentifier  title="{Plant}"></ObjectIdentifier>
+                            <ObjectIdentifier  title="{Main>Plant}"></ObjectIdentifier>
                         </cells>
                         <cells>
-                            <ObjectIdentifier  title="{Roomid}"></ObjectIdentifier>
+                            <ObjectIdentifier  title="{Main>Floor}"></ObjectIdentifier>
                         </cells>
                         <cells>
-                            <ObjectIdentifier  title="{Roomno}"></ObjectIdentifier>
+                            <ObjectIdentifier  title="{Main>Roomid}"></ObjectIdentifier>
                         </cells>
                         <cells>
-                            <ObjectIdentifier  title="{Roomtp}"></ObjectIdentifier>
+                            <ObjectIdentifier  title="{Main>Roomno}"></ObjectIdentifier>
+                        </cells>
+                        <cells>
+                            <ObjectIdentifier  title="{Main>Roomtp}"></ObjectIdentifier>
                         </cells>
                         <cells>
                             <InputListItem >
