--- a/odata/webapp/view/App.view.xml
+++ b/odata/webapp/view/App.view.xml
@@ -10,21 +10,25 @@
                 
                 <f:FlexibleColumnLayout
                 id="fcl" 
-                backgroundDesign="Solid" >
+                backgroundDesign="Solid"
+                
+                 >
                 <!-- 화면 구성 배치-->
 
                 <!-- 첫번째 페이지 -->
                 <f:beginColumnPages>
                     <mvc:XMLView 
                         id="beginView"
-                        viewName="odata.view.View1">
+                        viewName="odata.view.View1"
+                        width = "100%">
                     </mvc:XMLView>
                 </f:beginColumnPages>
 
                 <f:midColumnPages>
                     <mvc:XMLView 
                         id="detailView"
-                        viewName="odata.view.Detail">
+                        viewName="odata.view.Detail"
+                        width = "100%">
                     </mvc:XMLView>
 
 
