--- a/odata/webapp/view/Detail.view.xml
+++ b/odata/webapp/view/Detail.view.xml
@@ -5,8 +5,9 @@
     xmlns:f="sap.f"
     xmlns:form="sap.ui.layout.form"
     xmlns="sap.uxap"
+    xmlns:layout="sap.ui.layout"
 >
-    <ObjectPageLayout 
+    <ObjectPageLayout
         id="ObjectPageLayout"
         showTitleInHeaderContent="true"
         alwaysShowContentHeader="false"
@@ -16,85 +17,53 @@
         upperCaseAnchorBar="false">
         <headerTitle>
             <ObjectPageDynamicHeaderTitle>
+                <expandedHeading>
+                    <m:Title text="{app>/detail/Roomno}" wrapping="true" />
+                </expandedHeading>
             </ObjectPageDynamicHeaderTitle>
         </headerTitle>
 
         <headerContent>
             <m:FlexBox wrap="Wrap"
-                       fitContainer="true"
-                       alignItems="Stretch">
+                fitContainer="true"
+                alignItems="Stretch">
                 <f:Avatar
                     displayShape="Square"
                     displaySize="L"
-                    class="sapUiTinyMarginEnd">
-                </f:Avatar>
+                    backgroundColor="Accent7"
+                    class="sapUiTinyMarginEnd" />
+
+
+                <layout:VerticalLayout class="sapUiSmallMarginBeginEnd">
+                    <m:ObjectStatus title="층 수" text="{app>/detail/Floor}" />
+                    <m:ObjectStatus title="룸 id" text="{app>/detail/Roomid}" />
+                    <m:ObjectStatus title="방 호수" text="{app>/detail/Roomno}" />
+                    <m:ObjectStatus title="현재 방 상태" text="{app>/detail/Roomtp}" />
+                </layout:VerticalLayout>
             </m:FlexBox>
         </headerContent>
 
         <sections>
-            <ObjectPageSection title="General Information">
-                <subSections>
-                    <ObjectPageSubSection>
-                        <blocks>
-                            <m:Text text="{app>/detail/Plant}" />
-                            <!-- <m:VBox>
-                                <m:VBox>
-                                    <m:Text text="기타"/>
-                                    <m:TextArea width="100%" height="100px" />
-                                    <m:Text text="추가사항"/>
-                                    <m:TextArea width="100%" height="100px" />
-                               </m:VBox>
-                            </m:VBox>  -->
-                        </blocks>
-                    </ObjectPageSubSection>
-                </subSections>
-            </ObjectPageSection>
-
-            <ObjectPageSection title="Suppliers">
+            <ObjectPageSection title="특이사항">
                 <subSections>
                     <ObjectPageSubSection>
                         <blocks>
                             <m:VBox>
-                                    <m:Text text="특이사항" />
-                                    <m:TextArea 
-                                    width="100%" 
+                                <m:Text text="특이사항" />
+                                <m:TextArea
+                                    width="100%"
                                     height="100px"
                                     value="{app>/detail/Note}"
                                     valueState="Information"
                                     placeholder="ValueState : Information"
-                                     />
-                            
-                                    
-    
-                                    <m:Text text="추가사항"/>
-                                    <m:TextArea width="100%" height="100px" />
+                                />
+                                <m:Button text="저장" type="Emphasized" press="onPress" />
+                            </m:VBox>
 
-                                    <m:Button text="저장" type="Emphasized" press="onPress" />
-
-                                    
-                                </m:VBox>
-                            <!-- <m:Table 
-                            id="suppliersTable"
-                            items="{ path: '/RoomstatusSet' }">
-                            <m:columns>
-                                <m:Column>
-                                    <m:Text text="특이사항" />
-                                </m:Column>
-                            
-                            </m:columns>
-                            <m:items>
-                                <m:ColumnListItem type="Navigation" press=".onDetailListItemPress">
-                                    <m:cells>
-                                        <m:ObjectIdentifier text="{Note}"></m:ObjectIdentifier>
-                                    </m:cells>
-                                
-                                </m:ColumnListItem>
-                            </m:items>
-                        </m:Table> -->
                         </blocks>
                     </ObjectPageSubSection>
                 </subSections>
-            </ObjectPageSection> 
+            </ObjectPageSection>
         </sections>
     </ObjectPageLayout>
 </mvc:View>
